Fix tab detaching from immersive fullscreen windows

When detaching a tab to a new browser, we used to just fullscreen
the window, which is different from the immersive fullscreen window.
This caused the new window to block showing the shelf as well as
revealing the tab strip.

BUG=776557
TEST=interactive_ui_tests --gtest_filter=TabDragging/DetachToBrowserTabDragControllerTest.DetachToOwnWindowWhileInImmersiveFullscreenMode/*

Change-Id: Idd3714fc9ec00e0e771ed93f77b40113c68b0ff9
Reviewed-on: https://chromium-review.googlesource.com/804174
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521094}
Former-commit-id: 6b283b6a011d1e97aefe1d690c9d960c455ddad0